--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#6200EE</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorPrimaryGreen">#2E8B57</color>
+    <color name="colorPrimaryDarkGreen">#006400</color>
+    <color name="colorAccentGreen">#6B8E23</color>
+
+
+    <color name="colorPrimaryBlack">#A0A3A1</color>
+    <color name="colorPrimaryDarkBlack">#393A39</color>
+    <color name="colorAccentBlack">#C9CAC7</color>
 </resources>
