--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,15 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
-    <color name="colorPrimaryDark">#3700B3</color>
-    <color name="colorAccent">#03DAC5</color>
+
+    <color name="colorPrimary">#FFFFFF</color>
+    <color name="colorPrimaryDark">#FFFFFF</color>
+    <color name="colorAccent">#FFFFFF</color>
+    <color name="colorWhite">#FFFFFF</color>
+
+    <color name="colorPrimaryBlue">#6200EE</color>
+    <color name="colorPrimaryDarkBlue">#3700B3</color>
+    <color name="colorAccentBlue">#03DAC5</color>
+    <color name="colorBlue">#31B6F3</color>
+    <color name="darkBlue">#1329A5</color>
 
     <color name="colorPrimaryGreen">#2E8B57</color>
     <color name="colorPrimaryDarkGreen">#006400</color>
     <color name="colorAccentGreen">#6B8E23</color>
-
+    <color name="colorGreen">#8CE18F</color>
+    <color name="darkGreen">#099E0C</color>
 
     <color name="colorPrimaryBlack">#A0A3A1</color>
     <color name="colorPrimaryDarkBlack">#393A39</color>
     <color name="colorAccentBlack">#C9CAC7</color>
+    <color name="colorBlack">#66696A</color>
+    <color name="darkBlack">#242427</color>
 </resources>
